--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <body>
         <h1>Pengxiang Li's CSCE 190 Site</h1>
 
-        <p>I &hearts; coding!</p>
+        <section class="assignment">
+            <a href="files/Problem Statement.pdf"><img src="images/problem-statement.png"></a>
+            <section class="ass_details">
+                <a href="files/Problem Statement.pdf"><h2>Problem statement</h2></a>
+                <p>
+                    It can be hard to find the best deals on everyday products like food and gas. Our solution should help people find the best deals on items like these.
+                </p>
+            </section>
+
+        </section>
+
     </body>
 </html>
