--- a/index.html
+++ b/index.html
@@ -6,12 +6,25 @@
     <body>
         <h1>Pengxiang Li's CSCE 190 Site</h1>
 
+        <!-- Problem Statement Assignment-->
         <section class="assignment">
             <a href="files/Problem Statement.pdf"><img src="images/problem-statement.png"></a>
             <section class="ass_details">
                 <a href="files/Problem Statement.pdf"><h2>Problem statement</h2></a>
                 <p>
                     It can be hard to find the best deals on everyday products like food and gas. Our solution should help people find the best deals on items like these.
+                </p>
+            </section>
+
+        </section>
+        
+        <!--Affinity Diagram Assignment-->
+        <section class="assignment">
+            <a href="files/affinity-diagram.pdf"><img src="images/affinity-diagram.png"></a>
+            <section class="ass_details">
+                <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram</h2></a>
+                <p>
+                   My group and I worked together to brainstorm all things.
                 </p>
             </section>
 
