--- a/index.html
+++ b/index.html
@@ -31,5 +31,17 @@
 
         </section>
 
+        <!--Personna Assignment-->
+        <section class="assignment">
+            <a href="files/Personna.pdf"><img src="images/Personna.png"></a>
+            <section class="ass_details">
+                <a href="files/Personna.pdf"><h2>Personna: Fan Bingbing </h2></a>
+                <p>
+                   A personna of a app user.
+                </p>
+            </section>
+
+        </section>
+
     </body>
 </html>
