--- a/index.html
+++ b/index.html
@@ -43,5 +43,17 @@
 
         </section>
 
+        <!--Storyboards Assignment-->
+        <section class="assignment">
+            <a href="files/Storyboard.pdf"><img src="images/Storyboards.jpg"></a>
+            <section class="ass_details">
+                <a href="files/Storyboard.pdf"><h2>Storyboards: There are five storyboards from my group. </h2></a>
+                <p>
+                   Storyboard
+                </p>
+            </section>
+
+        </section>
+
     </body>
 </html>
