--- a/index.html
+++ b/index.html
@@ -94,6 +94,21 @@
                 </section>
 
             </section>
+
+            <!--low-fi Assignment-->
+            <section class="assignment">
+                <a href="files/HiFiPrototypeFinalDraft/src/index.html">
+                    <h2>low-fi prototype </h2>
+                </a>
+                    <a href="files/HiFiPrototypeFinalDraft/src/index.html">
+                        <img src="images/low-fi.jpg">
+                    </a>
+                    <p>
+                    A paper discount application
+                    </p>
+                </section>
+
+            </section>
         </div>
         
 
